--- a/style.css
+++ b/style.css
@@ -2,16 +2,19 @@ h1{
     font-size: 200%;
     text-align: center;
     font-family: arial; 
-    text-shadow: 0px 0px 7px rgb(114, 89, 140);
+    text-shadow: 0px 0px 7px rgb(255, 255, 255);
 }
 
 h2{
-    display: grid;                      
-    grid-auto-rows: 100px 100px;
+    display: grid;
     grid-gap: 10px;
-    line-height: 1.5;
-    text-indent: 30%;
+    line-height: 3;
     background: #fdfdfd;
+}
+
+p{
+    text-indent: 10%;
+
 }
 
 .note{
