--- a/style.css
+++ b/style.css
@@ -6,14 +6,22 @@ h1{
 }
 
 h2{
-    display: grid;
-    grid-gap: 10px;
-    line-height: 3;
+    padding-top: 10px;
+    padding-left: 5px;
+    padding-bottom: 5px;
     background: #fdfdfd;
+    border: solid purple;
+    border-top: solid purple 6px;
+
+    
+}
+
+h3{
+    background-color: rgb(170, 188, 238);
 }
 
 p{
-    text-indent: 10%;
+    text-indent: 2%;
 
 }
 
@@ -21,3 +29,6 @@ p{
     color: green;
 }
 
+.item{
+    border-top: dashed purple;
+}
