jsによるページ上の表示を変更する機能を追加(html,cssも修正)

--- a/project.css
+++ b/project.css
@@ -8,9 +8,9 @@ h1{
 }
 
 p{
-    background-color: #ccffcc;
+    /*background-color: #ccffcc;*/
     padding: 10px 0px 10px 0px;
-    text-align: center;
+    text-align: left;
 
 
 }
